// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `"Text"`;

exports[`Text Element render() should render correctly 1`] = `
Object {
  "input": undefined,
  "props": Object {
    "htmlAttributes": Object {
      "someAttr": "hello",
    },
    "id": "hr",
    "label": "Hello World",
  },
  "type": Object {
    "render": [Function],
    "type": "Text",
    "valid": [Function],
    "value": [Function],
  },
  "wrapper": <p
    id="dialog-hr"
    someattr="hello"
  >
    Hello World
  </p>,
}
`;

exports[`Text Element render() should render correctly 2`] = `
Object {
  "input": undefined,
  "props": Object {
    "id": "noHTML",
  },
  "type": Object {
    "render": [Function],
    "type": "Text",
    "valid": [Function],
    "value": [Function],
  },
  "wrapper": <p
    id="dialog-noHTML"
  >
    undefined
  </p>,
}
`;
